<resources>
    <string name="app_name">UniRider</string>
    <string name="action_settings">Settings</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_charge">Charge</string>
    <string name="button_connect">Connect</string>
    <string name="button_delete">Delete</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_scan">Scan</string>
    <string name="confirmation_delete">Are you sure you want to delete this wheel?</string>
    <string name="confirmation_disconnect">Are you sure you want to disconnect this wheel?</string>
    <string name="dialog_wait">Please wait…</string>
    <string name="fragment_label_bluetooth">Bluetooth</string>
    <string name="fragment_label_device">Device</string>
    <string name="fragment_label_scan">Devices</string>
    <string name="fragment_label_total_mileage">Total</string>
    <string name="label_amperage">Amperage</string>
    <string name="label_amperage_suffix">A</string>
    <string name="label_battery">Battery</string>
    <string name="label_bt_name">Bluetooth</string>
    <string name="label_charge">Charge</string>
    <string name="label_charge_amperage">Charge Amperage</string>
    <string name="label_charge_rate">Charge Rate</string>
    <string name="label_charge_warning">Charging will start as soon as you connect…</string>
    <string name="label_charger_offset">Charger Offset</string>
    <string name="label_charging">Charging</string>
    <string name="label_devices">Devices</string>
    <string name="label_distance">Distance</string>
    <string name="label_distance_offset">Distance Offset</string>
    <string name="label_km">km</string>
    <string name="label_max">max</string>
    <string name="label_min">min</string>
    <string name="label_percentage_abbr">%</string>
    <string name="label_rate">Rate</string>
    <string name="label_remaining_range">Remaining</string>
    <string name="label_remaining_time">Time</string>
    <string name="label_total_range">Total</string>
    <string name="label_voltage">Voltage</string>
    <string name="label_voltage_abbr">V</string>
    <string name="label_voltage_full">Full Charge</string>
    <string name="label_voltage_initial">Initial</string>
    <string name="label_voltage_required">Required</string>
    <string name="label_voltage_start">Start</string>
    <string name="label_voltage_target">Target</string>
    <string name="label_wh">wh</string>
    <string name="label_wh_per_hour">wh/h</string>
    <string name="label_wh_per_km">wh/km</string>
    <string name="label_wheel_premileage">Pre-Mileage</string>
    <string name="label_wheel_mileage">Mileage</string>
    <string name="label_wheel_name">Name</string>
    <string name="label_wheel_sold">Sold</string>
    <string name="label_wheel_voltage_max">Max voltage</string>
    <string name="label_wheel_voltage_min">Min voltage</string>
    <string name="label_wheel_wh">Wh</string>
</resources>
