<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.WheelViewFragment">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <!-- Name-->
        <TextView
                android:id="@+id/view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
        />

        <!-- Bluetooth Name -->
        <LinearLayout
                android:id="@+id/group_bt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/view_name"
        >
            <TextView
                    android:id="@+id/view_bt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="italic"
            />
        </LinearLayout>

        <!-- Mileage-->
        <LinearLayout
                android:id="@+id/group_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/group_bt_name"
        >
            <TextView
                    android:id="@+id/view_mileage_label"
                    android:labelFor="@+id/view_mileage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/label_wheel_mileage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

            <TextView
                    android:id="@+id/view_mileage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

            <Button
                    android:id="@+id/button_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_connect"
            />
        </LinearLayout>

        <!-- Voltage & Battery-->
        <LinearLayout
                android:id="@+id/group_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_below="@+id/group_mileage"
        >
            <EditText
                    android:id="@+id/edit_voltage"
                    android:hint="@string/label_wheel_voltage"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textAlignment="viewEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:autofillHints=""
            />

            <TextView
                    android:id="@+id/view_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
        >
            <Button
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/button_edit"
            />

            <Button
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_delete"
            />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
